Add simple cpu monitor task
