# main/http_server/axe-os/src/app/services/system.service.ts
@@ -54,6 +54,7 @@ export class SystemApiService {
         errorPercentage: 0.2,
         bestDiff: 238214491,
         bestSessionDiff: 21212121,
+        cpuUsage: 12.5,
         freeHeap: 200504,
         freeHeapInternal: 200504,
         freeHeapSpiram: 200504,
